--- a/2 - Barra de Navegação Simples com logo - Telas Maiores/CSS Puro/css/style.scss
+++ b/2 - Barra de Navegação Simples com logo - Telas Maiores/CSS Puro/css/style.scss
@@ -19,17 +19,19 @@ ul{
     align-items: center;
     background-color: grey;
     &-brand{
-        margin: 0; //O H1 tem uma margem por padrão
-        a{
-            display: block;
-            width: 100px;
-            height: 100px;
-            background-image: url("https://images.vexels.com/media/users/3/142020/isolated/lists/57c9a9b3b4fdd07cc52898e52d64cea7-vendido-vermelho-arredondado.png");
-            background-size: cover;
-            background-position: center center;
+        //O H1 tem uma margem por padrão
+        display: block;
+        h1{
+            position: absolute;
             text-indent: -9999px;
         }
+            
+        img{
+            width: 100px;
+            height: 100px; 
+        }
     }
+
     &-nav{
         display: flex;
         flex-wrap: wrap;
