--- a/3 - Barra de Navegação Simples com logo - Telas menores/CSS Puro/css/style.css
+++ b/3 - Barra de Navegação Simples com logo - Telas menores/CSS Puro/css/style.css
@@ -69,17 +69,34 @@ a {
       flex-basis: 100%;
 }
 
+.navbar .collapse.show {
+  display: initial;
+}
+
 .navbar .navbar-nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.navbar .navbar-nav .nav-item:hover {
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .navbar .navbar-nav .nav-item .nav-link {
   display: block;
   padding: .5rem 1rem;
+  text-align: center;
+}
+
+.navbar .navbar-nav .nav-item .nav-link:hover {
+  color: rgba(255, 255, 255, 0.7);
 }
 
 @media (min-width: 576px) {
@@ -90,6 +107,12 @@ a {
     display: initial;
     -ms-flex-preferred-size: auto;
         flex-basis: auto;
+  }
+  .navbar-expand-sm .navbar-nav {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 /*# sourceMappingURL=style.css.map */
