--- a/3 - Barra de Navegação Simples com logo - Telas menores/CSS Puro/css/style.scss
+++ b/3 - Barra de Navegação Simples com logo - Telas menores/CSS Puro/css/style.scss
@@ -65,16 +65,27 @@ a{
             // align-items: center;
             // flex-grow: 1;
         }
+        &.show{
+            display: initial;
+        }
     }
 
     // Menu de itens
     .navbar-nav{
         display: flex;
         flex-wrap: wrap;
+        flex-direction: column;
         .nav-item{
+            &:hover{
+                background-color: rgba(255, 255, 255, .3);
+            }
             .nav-link{
                 display: block;
                 padding: .5rem 1rem;
+                text-align: center;
+                &:hover{
+                    color: rgba(255, 255, 255, 0.7);
+                }
             }
         }
     }
@@ -88,6 +99,9 @@ a{
         .collapse.navbar-collapse{
             display: initial;
             flex-basis: auto;
+        }
+        .navbar-nav{
+            flex-direction: row;
         }
     }
 }
