--- a/3 - Barra de Navegação Simples com logo - Telas menores/CSS Puro/css/style.css
+++ b/3 - Barra de Navegação Simples com logo - Telas menores/CSS Puro/css/style.css
@@ -50,7 +50,7 @@ a {
   font-size: 1.25rem;
   background-color: transparent;
   border: 1px solid transparent;
-  border: .25rem;
+  border-radius: .25rem;
 }
 
 .navbar-toggler-icon {
@@ -58,6 +58,7 @@ a {
   width: 1.5rem;
   height: 1.5rem;
   color: white;
+  vertical-align: middle;
 }
 
 .navbar .collapse {
