--- a/18 - Clone Spotify/Boostrap/css/style.scss
+++ b/18 - Clone Spotify/Boostrap/css/style.scss
@@ -1,6 +1,3 @@
-header{
-    background-color: rgba($color: #000000, $alpha: .6);
-}
 
 body{
     background-image: url("../imagens/capa.png"),
@@ -12,14 +9,46 @@ body{
     background-attachment: fixed;
 }
 
+header{
+    background-color: rgba($color: #000000, $alpha: .6);
+
+    button.navbar-toggler{
+        span.navbar-toggler-icon{
+            color: white;
+        }
+        
+    }
+
+    .navbar-nav{
+        .nav-link{
+            color: white;
+            &:hover{
+                color: #7c26f8;
+                transition: all 3s linear;
+            }
+            
+            &.disabled-hover{
+                color: white;
+                transition: all 3s linear;
+            }
+        }
+    }
+}
+
+
 #principal{
 
     height: 100vh;
 
+    h1{
+        font-size: 3.5rem;
+    }
+
     a{
         color: white;
         border-radius: 4rem;
-        &:nth-child(1){
+        text-transform: uppercase;
+        &.first-btn{
             background-color: #7c26f8;
             border: none;
             &:hover{
@@ -27,11 +56,28 @@ body{
                 color: #7c26f8;
             }
         }
-        &:nth-child(2){
+        &.second-btn{
             &:hover{
                 background-color: #7c26f8;
                 border: 1px solid transparent;
             }
+        }
+    }
+}
+
+#sobre{
+    .title-color{
+        h2,h3{
+            color: #7c25f8;
+            font-weight: bold;
+        }
+    }
+}
+
+@media (min-width: 576px){
+    #principal{
+        h1{
+            font-size: 5.5rem;
         }
     }
 }
