--- a/18 - Clone Spotify/Boostrap/css/style.scss
+++ b/18 - Clone Spotify/Boostrap/css/style.scss
@@ -41,7 +41,7 @@ header{
     height: 100vh;
 
     h1{
-        font-size: 3.5rem;
+        font-size: 3.5em;
     }
 
     a{
@@ -71,6 +71,29 @@ header{
             color: #7c25f8;
             font-weight: bold;
         }
+    }
+}
+
+#recursos{
+    &>div{
+        padding: 20px;
+    }
+
+    h2{
+        color: white;
+        font-size: 3.5rem;
+    }
+
+    h3{
+        color: #9bf0e1;
+    }
+
+    p{
+        color: white;
+    }
+
+    h2, h3{
+        font-weight: bold;
     }
 }
 
