--- a/18 - Clone Spotify/Boostrap/css/style.css
+++ b/18 - Clone Spotify/Boostrap/css/style.css
@@ -4,6 +4,7 @@ body {
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
+  overflow-x: hidden;
 }
 
 header {
@@ -65,7 +66,8 @@ header .navbar-nav .nav-link.disabled-hover {
 }
 
 #recursos > div {
-  padding: 20px;
+  padding-bottom: 20px;
+  padding-top: 20px;
 }
 
 #recursos h2 {
@@ -83,6 +85,69 @@ header .navbar-nav .nav-link.disabled-hover {
 
 #recursos h2, #recursos h3 {
   font-weight: bold;
+}
+
+#recursos .rotated {
+  -webkit-transform: rotate(25deg);
+          transform: rotate(25deg);
+  padding: 40px;
+  overflow: hidden;
+}
+
+#rodape {
+  padding: 40px 0;
+  background-color: black;
+  position: relative;
+  z-index: 10000;
+}
+
+#rodape a {
+  color: white;
+  font-size: .9rem;
+}
+
+#rodape h4 {
+  color: rgba(255, 255, 255, 0.4);
+  font-size: .9rem;
+  font-weight: bold;
+}
+
+#rodape ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0px 20px;
+}
+
+#rodape ul.nav-icons {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#rodape div.logo-rodape-box {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media (max-width: 576px) {
+  #principal h1 {
+    font-size: 5.5rem;
+  }
+  #rodape h4 {
+    padding-top: 20px;
+  }
 }
 
 @media (min-width: 576px) {
