--- a/18 - Clone Spotify/Boostrap/css/style.css
+++ b/18 - Clone Spotify/Boostrap/css/style.css
@@ -35,6 +35,11 @@ header .navbar-nav .nav-link.disabled-hover {
   height: 100vh;
 }
 
+#principal .carousel-prev-next {
+  width: 5%;
+  font-size: 3rem;
+}
+
 #principal h1 {
   font-size: 3.5em;
 }
@@ -143,7 +148,7 @@ header .navbar-nav .nav-link.disabled-hover {
 
 @media (max-width: 576px) {
   #principal h1 {
-    font-size: 5.5rem;
+    font-size: 3.5rem;
   }
   #rodape h4 {
     padding-top: 20px;
