--- a/18 - Clone Spotify/Boostrap/css/style.css
+++ b/18 - Clone Spotify/Boostrap/css/style.css
@@ -146,7 +146,7 @@ header .navbar-nav .nav-link.disabled-hover {
           justify-content: center;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 575.98px) {
   #principal h1 {
     font-size: 3.5rem;
   }
@@ -155,9 +155,21 @@ header .navbar-nav .nav-link.disabled-hover {
   }
 }
 
-@media (min-width: 576px) {
+@media (min-width: 767.98px) {
+  #principal h1 {
+    font-size: 4.5rem;
+  }
+}
+
+@media (min-width: 991.98px) {
   #principal h1 {
     font-size: 5.5rem;
+  }
+}
+
+@media (min-width: 1199.98px) {
+  #principal h1 {
+    font-size: 6rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
