--- a/19 - projetos Boostrap/1 - Album/css/style.css
+++ b/19 - projetos Boostrap/1 - Album/css/style.css
@@ -9,4 +9,63 @@ header .hidden-menu {
 header h4, header p {
   color: white;
 }
+
+#principal div.container p a {
+  margin: 2px;
+}
+
+#conteudo div.card {
+  -webkit-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+}
+
+#conteudo div.card-footer {
+  border: none;
+  background-color: #fff;
+}
+
+@media (max-width: 575.98px) {
+  #principal h1 {
+    font-size: 3.5rem;
+  }
+  #principal p a {
+    padding: 0.25rem 0.5rem;
+    font-size: 0.875rem;
+    border-radius: 0.2rem;
+  }
+}
+
+@media (min-width: 767.98px) {
+  #principal h1 {
+    font-size: 3.5rem;
+  }
+  #principal p a {
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    border-radius: .25rem;
+  }
+}
+
+@media (min-width: 991.98px) {
+  #principal h1 {
+    font-size: 4.5rem;
+  }
+  #principal p a {
+    padding: 0.5rem 1rem;
+    font-size: 1.25rem;
+    border-radius: 0.3rem;
+  }
+}
+
+@media (min-width: 1199.98px) {
+  #principal h1 {
+    font-size: 5.5rem;
+  }
+}
+
+@media (min-width: 1399.98px) {
+  #principal h1 {
+    font-size: 6rem;
+  }
+}
 /*# sourceMappingURL=style.css.map */
