--- a/19 - projetos Boostrap/1 - Album/css/style.scss
+++ b/19 - projetos Boostrap/1 - Album/css/style.scss
@@ -12,3 +12,90 @@ header{
         color: white;
     }
 }
+
+#principal{
+    div.container{
+        p{
+            a{
+                margin: 2px;
+            }
+        }
+    }
+}
+
+#conteudo{
+    div.card{
+        box-shadow: 1px 1px 5px rgba($color: #000000, $alpha: .1);
+    }
+    
+    div.card-footer{
+        border: none;
+        background-color: #fff;
+    }
+}
+
+
+// X-Small devices (portrait phones, less than 576px)
+@media (max-width: 575.98px){ 
+    #principal{
+        h1{
+            font-size: 3.5rem;
+        }
+
+        p{
+            a{
+                padding: 0.25rem 0.5rem;
+                font-size: 0.875rem;
+                border-radius: 0.2rem;
+            }
+        }
+    }
+}
+// Small devices (landscape phones, less than 768px)
+@media (min-width: 767.98px) { 
+    #principal{
+        h1{
+            font-size: 3.5rem;
+        }
+
+        p{
+            a{
+                padding: .375rem .75rem;
+                font-size: 1rem;
+                border-radius: .25rem;
+            }
+        }
+    }
+}
+// Medium devices (tablets, less than 992px)
+@media (min-width: 991.98px) {
+    #principal{
+        h1{
+            font-size: 4.5rem;
+        }
+
+        p{
+            a{
+                padding: 0.5rem 1rem;
+                font-size: 1.25rem;
+                border-radius: 0.3rem;
+            }
+        }
+    }
+ }
+// Large devices (desktops, less than 1200px)
+@media (min-width: 1199.98px) { 
+    #principal{
+        h1{
+            font-size: 5.5rem;
+        }
+    }
+ }
+// X-Large devices (large desktops, less than 1400px)
+@media (min-width: 1399.98px) { 
+    #principal{
+        h1{
+            font-size: 6rem;
+        }
+    }
+ }
